<resources>
    <string name="app_name">beacon</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="action_startscan">startscan</string>
    <string name="action_stopscan">stopscan</string>
    <string name="not_supported_ble">Low power Bluetooth is not supported</string>
    <string name="action_connect">connect</string>
    <string name="action_disconnect">disconnect</string>
    <string name="devicename">Device name: </string>
    <string name="deviceMajor">Device Major: </string>
    <string name="deviceMinor">Device Minor: </string>
    <string name="deviceUUID">Device UUID: </string>
    <string name="deviceMAC">MAC: </string>
    <string name="deviceRSSI">RSSI: </string>
    <string name="uuid">UUID:</string>
    <string name="intput_the_uuid">intput the uuid</string>
    <string name="state">State:</string>
    <string name="status_connecting">Connecting</string>
    <string name="major">Device Major:</string>
    <string name="minor">Device Minor:</string>
    <string name="period">Period:</string>
    <string name="milliseconds">ms</string>
    <string name="txpower">TxPower:</string>
    <string name="dbm">dBm</string>
    <string name="name">Device name:</string>
    <string name="input_the_name">input the name</string>
    <string name="distance">Distance:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="calculate_distance">Calculate Distance</string>
    <string name="buy_product_view">If you buy the product with temperature and humidity, you can click the button below to read the temperature and humidity</string>
    <string name="btn_buy_product">read temperature and humidity</string>
    <string name="start">START</string>
    <string name="send">SEND</string>
    <string name="stop">STOP</string>
</resources>
