<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/uuid" />

                <EditText
                    android:id="@+id/text_uuid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:digits="0123456789abcdefABCDEF"
                    android:hint="@string/intput_the_uuid"
                    android:maxLength="32"
                    android:maxLines="2" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/state" />

                <TextView
                    android:id="@+id/text_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/status_connecting" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/major" />

                <EditText
                    android:id="@+id/text_Major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/minor" />

                <EditText
                    android:id="@+id/text_Minor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/period" />

                <EditText
                    android:id="@+id/text_Period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milliseconds" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txpower" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dbm" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/text_Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:maxLength="15"
                    android:hint="@string/input_the_name"
                    android:inputType="text" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/distance" />

            </LinearLayout>

            <include layout="@layout/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/text_temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:visibility="gone" />
            </LinearLayout>

            <include layout="@layout/view_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/btn_calculateDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/calculate_distance" />

                <TextView
                    android:id="@+id/text_explain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_calculateDistance"
                    android:text="@string/buy_product_view" />

                <Button
                    android:id="@+id/btn_readth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_explain"
                    android:gravity="center"
                    android:text="@string/btn_buy_product" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>